// ═══════════════════════════════════════════════════════════════════════════════
// SISTEMA DE SIMULACIÓN CURRICULAR - DIAGRAMA ENTIDAD-RELACIÓN
// ═══════════════════════════════════════════════════════════════════════════════
// Notación Barker - Para usar en dbdiagram.io (https://dbdiagram.io/)
// Copia y pega este código completo en dbdiagram.io para generar el diagrama visual
// 
// ESQUEMA COMPLETO - Todas las tablas del sistema
// Actualizado: Octubre 8, 2025
//
// FUNCIONALIDADES PRINCIPALES:
// - Sistema de autenticación con usuarios
// - Simulación de cambios curriculares temporales  
// - Sistema de convalidaciones de materias externas
// - Análisis de impacto en progreso académico
// - Gestión completa de prerrequisitos y dependencias
// - Seguimiento de materias actuales por período académico
//
// INSTRUCCIONES:
// 1. Ve a https://dbdiagram.io/
// 2. Crea una nueva cuenta o inicia sesión
// 3. Copia todo este código y pégalo en el editor
// 4. El diagrama se generará automáticamente
// ═══════════════════════════════════════════════════════════════════════════════

// ┌─────────────────────────────────────────────────────────────────────────────┐
// │                           ENTIDADES PRINCIPALES                             │
// └─────────────────────────────────────────────────────────────────────────────┘

Table users {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  name varchar(255) [not null, note: 'User full name']
  email varchar(255) [unique, not null, note: 'Unique email address']
  email_verified_at timestamp [null, note: 'Email verification timestamp']
  password varchar(255) [not null, note: 'Encrypted password']
  must_change_password boolean [default: false, note: 'Force password change flag']
  remember_token varchar(100) [null, note: 'Remember me token']
  created_at timestamp [not null, note: 'Creation timestamp']
  updated_at timestamp [not null, note: 'Last update timestamp']
  
  note: 'Sistema de Autenticación - Usuarios del sistema administrativo'
}

Table subjects {
  code varchar(10) [pk, note: 'Primary Key - Subject code (e.g., 4100549)']
  name varchar(255) [not null, note: 'Subject name']
  semester integer [not null, note: 'Semester number (1-10)']
  credits integer [not null, note: 'Academic credits']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  note: 'Materias del Currículo Interno - Plan de estudios oficial'
}

Table students {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  name varchar(255) [not null, note: 'Student full name']
  document varchar(20) [unique, note: 'Student ID document number']
  progress_percentage decimal(5,2) [default: 0, note: 'Academic progress (0-100%)']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  note: 'Estudiantes - Registro de estudiantes del programa'
}

Table external_curriculums {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  name varchar(255) [not null, note: 'External curriculum name']
  institution varchar(255) [note: 'Source institution name']
  description text [note: 'Curriculum description']
  uploaded_file varchar(255) [note: 'Path to original Excel file']
  metadata json [note: 'Additional metadata']
  status enum [default: 'active', note: 'Status: active, inactive']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  note: 'Mallas Curriculares Externas - Programas de otras universidades'
}

Table external_subjects {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  external_curriculum_id bigint [ref: > external_curriculums.id, not null, note: 'Foreign Key to external_curriculums']
  code varchar(255) [not null, note: 'External subject code']
  name varchar(255) [not null, note: 'External subject name']
  credits integer [not null, note: 'Academic credits']
  semester integer [not null, note: 'Semester in external curriculum']
  description text [note: 'Subject description']
  additional_data json [note: 'Extra data from Excel import']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (external_curriculum_id, code) [unique, name: 'unique_external_subject_per_curriculum']
  }
  
  note: 'Materias de Mallas Externas - Asignaturas de otros programas'
}

// ┌─────────────────────────────────────────────────────────────────────────────┐
// │                      ENTIDADES DE RELACIÓN (TABLAS PUENTE)                  │
// └─────────────────────────────────────────────────────────────────────────────┘

Table student_subject {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  student_id bigint [ref: > students.id, not null, note: 'Foreign Key to students']
  subject_code varchar(10) [ref: > subjects.code, not null, note: 'Foreign Key to subjects']
  grade decimal(3,1) [note: 'Final grade (0.0 to 5.0)']
  status enum [default: 'enrolled', note: 'Status: enrolled, passed, failed, withdrawn']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (student_id, subject_code) [unique, name: 'unique_student_subject']
  }
  
  note: 'Historial Académico - Materias cursadas por estudiantes'
}

Table student_current_subjects {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  student_id bigint [ref: > students.id, not null, note: 'Foreign Key to students']
  subject_code varchar(10) [ref: > subjects.code, not null, note: 'Foreign Key to subjects']
  semester_period varchar(20) [not null, note: 'Academic period (e.g., 2025-1, 2025-2)']
  status enum [default: 'cursando', note: 'Status: cursando, en_examen, perdida']
  partial_grade decimal(3,1) [note: 'Current partial grade']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (student_id, subject_code, semester_period) [unique, name: 'unique_current_enrollment']
    (student_id, semester_period) [name: 'index_student_period']
    subject_code [name: 'index_subject_code']
  }
  
  note: 'Materias Actuales - Inscripciones del período académico actual'
}

Table subject_prerequisites {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  subject_code varchar(10) [ref: > subjects.code, not null, note: 'Subject that requires prerequisites']
  prerequisite_code varchar(10) [ref: > subjects.code, not null, note: 'Required prerequisite subject']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (subject_code, prerequisite_code) [unique, name: 'unique_prerequisite_relation']
  }
  
  note: 'Prerrequisitos - Dependencias entre materias del currículo'
}

Table subject_convalidations {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  external_curriculum_id bigint [ref: > external_curriculums.id, not null, note: 'Foreign Key to external_curriculums']
  external_subject_id bigint [ref: > external_subjects.id, not null, note: 'Foreign Key to external_subjects']
  internal_subject_code varchar(10) [ref: > subjects.code, note: 'Internal subject code (null for free electives)']
  convalidation_type enum [not null, note: 'Type: direct, free_elective, not_convalidated']
  notes text [note: 'Convalidation notes and observations']
  equivalence_percentage decimal(5,2) [default: 100.00, note: 'Equivalence percentage']
  status enum [default: 'pending', note: 'Status: pending, approved, rejected']
  approved_by varchar(255) [note: 'User who approved the convalidation']
  approved_at timestamp [note: 'Approval timestamp']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (external_subject_id, internal_subject_code) [unique, name: 'unique_convalidation_mapping']
  }
  
  note: 'Configuración de Convalidaciones - Mapeo entre materias externas e internas'
}

Table student_convalidations {
  id bigint [pk, increment, note: 'Primary Key - Auto increment']
  student_id bigint [ref: > students.id, not null, note: 'Foreign Key to students']
  subject_convalidation_id bigint [ref: > subject_convalidations.id, not null, note: 'Foreign Key to subject_convalidations']
  external_grade decimal(4,2) [not null, note: 'Grade obtained in external subject']
  internal_grade decimal(4,2) [note: 'Grade converted to internal system']
  status enum [default: 'pending', note: 'Status: pending, approved, rejected']
  admin_notes text [note: 'Administrator notes and comments']
  processed_by varchar(255) [note: 'User who processed the convalidation']
  processed_at timestamp [note: 'Processing timestamp']
  created_at timestamp [not null]
  updated_at timestamp [not null]
  
  indexes {
    (student_id, subject_convalidation_id) [unique, name: 'unique_student_convalidation']
  }
  
  note: 'Convalidaciones por Estudiante - Aplicación de convalidaciones individuales'
}

// ┌─────────────────────────────────────────────────────────────────────────────┐
// │                        TABLAS DEL SISTEMA LARAVEL                           │
// └─────────────────────────────────────────────────────────────────────────────┘

Table password_reset_tokens {
  email varchar(255) [pk, note: 'Primary Key - User email']
  token varchar(255) [not null, note: 'Reset token']
  created_at timestamp [note: 'Token creation time']
  
  note: 'Tokens de Recuperación - Restablecimiento de contraseñas'
}

Table sessions {
  id varchar(255) [pk, note: 'Primary Key - Session ID']
  user_id bigint [ref: > users.id, note: 'Foreign Key to users (nullable)']
  ip_address varchar(45) [note: 'Client IP address']
  user_agent text [note: 'Client user agent string']
  payload longtext [not null, note: 'Session payload data']
  last_activity integer [not null, note: 'Last activity timestamp']
  
  indexes {
    user_id [name: 'index_user_id']
    last_activity [name: 'index_last_activity']
  }
  
  note: 'Sesiones de Usuario - Gestión de sesiones activas'
}

Table cache {
  key varchar(255) [pk, note: 'Primary Key - Cache key']
  value mediumtext [not null, note: 'Cached value']
  expiration integer [not null, note: 'Expiration timestamp']
  
  note: 'Cache del Sistema - Almacenamiento temporal de datos'
}

Table cache_locks {
  key varchar(255) [pk, note: 'Primary Key - Lock key']
  owner varchar(255) [not null, note: 'Lock owner identifier']
  expiration integer [not null, note: 'Lock expiration timestamp']
  
  note: 'Bloqueos de Cache - Control de concurrencia'
}

Table jobs {
  id bigint [pk, increment, note: 'Primary Key - Job ID']
  queue varchar(255) [not null, note: 'Queue name']
  payload longtext [not null, note: 'Job payload']
  attempts tinyint [not null, note: 'Number of attempts']
  reserved_at integer [note: 'Reserved timestamp']
  available_at integer [not null, note: 'Available timestamp']
  created_at integer [not null, note: 'Creation timestamp']
  
  indexes {
    queue [name: 'index_queue']
  }
  
  note: 'Cola de Trabajos - Sistema de colas asíncronas'
}

Table job_batches {
  id varchar(255) [pk, note: 'Primary Key - Batch ID']
  name varchar(255) [not null, note: 'Batch name']
  total_jobs integer [not null, note: 'Total jobs in batch']
  pending_jobs integer [not null, note: 'Pending jobs count']
  failed_jobs integer [not null, note: 'Failed jobs count']
  failed_job_ids longtext [not null, note: 'Failed job IDs']
  options mediumtext [note: 'Batch options']
  cancelled_at integer [note: 'Cancellation timestamp']
  created_at integer [not null]
  finished_at integer [note: 'Completion timestamp']
  
  note: 'Lotes de Trabajos - Agrupación de trabajos relacionados'
}

Table failed_jobs {
  id bigint [pk, increment, note: 'Primary Key - Failed job ID']
  uuid varchar(255) [unique, not null, note: 'Unique job identifier']
  connection text [not null, note: 'Queue connection']
  queue text [not null, note: 'Queue name']
  payload longtext [not null, note: 'Job payload']
  exception longtext [not null, note: 'Exception details']
  failed_at timestamp [default: `CURRENT_TIMESTAMP`, note: 'Failure timestamp']
  
  note: 'Trabajos Fallidos - Registro de trabajos con errores'
}

// ┌─────────────────────────────────────────────────────────────────────────────┐
// │                          NOTAS SOBRE RELACIONES                             │
// └─────────────────────────────────────────────────────────────────────────────┘

// RELACIONES PRINCIPALES EN NOTACIÓN BARKER:
//
// STUDENTS ||────────────────────< STUDENT_SUBJECT
//   (Un estudiante puede tener muchas materias en su historial)
//
// SUBJECTS ||────────────────────< STUDENT_SUBJECT  
//   (Una materia puede ser cursada por muchos estudiantes)
//
// STUDENTS ||────────────────────< STUDENT_CURRENT_SUBJECTS
//   (Un estudiante puede cursar muchas materias en el período actual)
//
// SUBJECTS ||────────────────────< SUBJECT_PREREQUISITES (subject_code)
//   (Una materia puede tener muchos prerrequisitos)
//
// SUBJECTS ||────────────────────< SUBJECT_PREREQUISITES (prerequisite_code)
//   (Una materia puede ser prerrequisito de muchas otras)
//
// EXTERNAL_CURRICULUMS ||────────< EXTERNAL_SUBJECTS
//   (Una malla externa contiene muchas materias)
//
// EXTERNAL_CURRICULUMS ||────────< SUBJECT_CONVALIDATIONS
//   (Una malla externa puede tener muchas configuraciones de convalidación)
//
// EXTERNAL_SUBJECTS ||───────────< SUBJECT_CONVALIDATIONS
//   (Una materia externa puede tener muchas formas de convalidación)
//
// SUBJECTS ||────────────────────< SUBJECT_CONVALIDATIONS
//   (Una materia interna puede convalidar muchas materias externas)
//
// STUDENTS ||────────────────────< STUDENT_CONVALIDATIONS
//   (Un estudiante puede tener muchas convalidaciones aplicadas)
//
// SUBJECT_CONVALIDATIONS ||──────< STUDENT_CONVALIDATIONS
//   (Una configuración de convalidación puede aplicar a muchos estudiantes)
//
// USERS ||───────────────────────< SESSIONS
//   (Un usuario puede tener múltiples sesiones activas)

// ┌─────────────────────────────────────────────────────────────────────────────┐
// │                        REGLAS DE NEGOCIO IMPLEMENTADAS                      │
// └─────────────────────────────────────────────────────────────────────────────┘

// 1. INTEGRIDAD REFERENCIAL:
//    - Todas las FK con CASCADE DELETE para mantener consistencia
//    - Restricciones únicas para evitar duplicados
//
// 2. PRERREQUISITOS:
//    - Modelados como autorelación en SUBJECTS
//    - Permite cadenas complejas de prerrequisitos
//
// 3. CONVALIDACIONES:
//    - Tres tipos: direct (1:1), free_elective, not_convalidated
//    - Sistema de aprobación con auditoría
//    - Porcentajes de equivalencia configurables
//
// 4. ESTADOS DE MATERIA:
//    - Historial: enrolled → passed/failed/withdrawn  
//    - Actuales: cursando → en_examen → perdida
//
// 5. PROGRESO ACADÉMICO:
//    - Calculado dinámicamente basado en materias aprobadas
//    - Porcentaje de completitud del programa
//
// 6. AUTENTICACIÓN:
//    - Sistema completo con cambio obligatorio de contraseña
//    - Sesiones persistentes con seguimiento
//
// 7. AUDITORÍA:
//    - Campos approved_by y processed_by
//    - Timestamps de todas las operaciones críticas
//
// 8. FLEXIBILIDAD:
//    - Soporte para múltiples períodos académicos
//    - Metadata JSON para extensibilidad futura
//    - Estados configurables via ENUMs